# gedcom

./: .gitignore  Cargo.toml  README.md  generate-coverage-report.sh
benches/: small_benchmark.rs
src/: lib.rs  main.rs  models.rs  parser.rs
src/models/: gedcom.rs  relation.rs
src/models/gedcom/: line.rs  tree.rs
src/models/relation/: api_response.rs  fact.rs  family.rs  person.rs
src/parser/: level.rs  line_value.rs  pointer.rs  primitive.rs  tag.rs  terminator.rs  util.rs  xref_id.rs
