[package]
name = "gedcom"
version = "0.1.0"
authors = ["Donald Robertson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33"
lazy_static = "1.0"
nom = "6.0.0-alpha1"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

[dev-dependencies]
criterion = "0.3"

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"

[[bench]]
name = "small_benchmark"
harness = false
